# SimpleChat

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SimpleChat.pro  clean.bat  cmake_install.cmake
.circleci/: config.yml
client/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  data.hpp  network.cpp  network.hpp  sample.cpp  sample.hpp  utils.cpp  utils.hpp
libs/includes/: condition_variable  mutex  shared_mutex  thread
server/: CMakeLists.txt  dispatcher.cpp  main.cpp
